--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -95,7 +95,7 @@ jobs:
           cat fastlane/json-key.json-base64 | base64 --decode > fastlane/json-key.json
           sed -i 's|RUNNER_WORKSPACE|${{ github.workspace }}|g' fastlane/Appfile
           sed -i 's|RUNNER_WORKSPACE|${{ github.workspace }}|g' fastlane/Fastfile
-          sed -e "s|VN|$(echo "v8.0.0" | cut -c2-)|g" fastlane/Fastfile
+          sed -e "s|VN|$(echo "${{ github.event.release.tag_name }}" | cut -c2-)|g" fastlane/Fastfile
           cat fastlane/Fastfile
 
       # - name: Generate Android Key for Signing the App    
