--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/toast": "^4.1.0",
     "@datadog/browser-rum": "^4.50.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
