--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -7,6 +7,9 @@
 		"hostname": "capacitor.native",
 		"androidScheme": "https"
 	},
+	"ios": {
+		"contentInset": "always"
+	},
 	"plugins": {
 		"CapacitorCookies": {
 			"enabled": true
@@ -18,5 +21,17 @@
 				"alert"
 			]
 		}
-	}
+	},
+	"packageClassList": [
+		"FirebaseMessagingPlugin",
+		"FirebaseMessagingPlugin",
+		"ActionSheetPlugin",
+		"AppPlugin",
+		"CAPCameraPlugin",
+		"DialogPlugin",
+		"HapticsPlugin",
+		"PreferencesPlugin",
+		"PushNotificationsPlugin",
+		"ToastPlugin"
+	]
 }
