fixed ios layout

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,6 +2,9 @@
 	"appId": "jp.socious.network",
 	"appName": "Socious",
 	"webDir": "dist",
+	"ios": {
+		"contentInset": "always"
+	},
 	"bundledWebRuntime": false,
 	"server": {
 		"hostname": "capacitor.native",
@@ -18,5 +21,17 @@
 				"alert"
 			]
 		}
-	}
+	},
+	"packageClassList": [
+		"FirebaseMessagingPlugin",
+		"FirebaseMessagingPlugin",
+		"ActionSheetPlugin",
+		"AppPlugin",
+		"CAPCameraPlugin",
+		"DialogPlugin",
+		"HapticsPlugin",
+		"PreferencesPlugin",
+		"PushNotificationsPlugin",
+		"ToastPlugin"
+	]
 }
