feat: Add Trapeze for automation perposes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "test": "vite --port 3000 --host 0.0.0.0 --mode test",
     "build": "vite build --mode production",
+    "config:apps": "npx trapeze run trapeze-config.yaml --android-project android --ios-project ios/App",
     "make:android": "npm run build && rm -rf android && npx cap add android",
     "make:ios": "npm run build && rm -rf ios && npx cap add ios",
     "build:icons": "npx @capacitor/assets generate --iconBackgroundColor '#183E3B' --splashBackgroundColor '#183E3B'",
@@ -101,6 +102,8 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@trapezedev/configure": "^7.0.10",
+    "@trapezedev/project": "^7.0.10",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.3",
     "@types/ramda": "^0.28.23",
