--- a/trapeze-config.yaml
+++ b/trapeze-config.yaml
@@ -10,7 +10,7 @@ vars:
   VERSION:
     default: 8.1.0
   IOS_BUILD_NUMBER:
-    default: 6
+    default: 7
   ANDROID_VERSION_CODE:
     default: 31
   IOS_DEVELOPMENT_TEAM_ID:
@@ -27,10 +27,9 @@ platforms:
         productName: $PRODUCT_NAME
         displayName: $DISPLAY_NAME
 
-        # strings:
-        #   - file: ../App.xcodeproj/project.pbxproj
-        #     set:
-        #       "DEVELOPMENT_TEAM": "DEVELOPMENT_TEAM"
+        buildSettings:
+          DEVELOPMENT_TEAM: $IOS_DEVELOPMENT_TEAM_ID
+
         plist:
           - replace: false
             entries:
@@ -40,7 +39,7 @@ platforms:
                     'remote-notification'
                   ]
         copy:
-          - src: ../../GoogleService-Info.plist
+          - src: ../../GoogleService-Info.plist #Needs to be added to build phases
             dest: App/GoogleService-Info.plist
           - src: ../../fastlane/ios-config/AppDelegate.swift
             dest: App/AppDelegate.swift
