--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -24,6 +24,10 @@ jobs:
       #   with:
       #     ruby-version: '3.3' # Not needed with a .ruby-version file
       #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Setup Cocoapods based on provided version
+        uses: maxim-lobanov/setup-cocoapods@v1
+        with:
+          version: latest
 
       - name: Cache node modules
         id: cache-npm
@@ -66,7 +70,7 @@ jobs:
 
       - name: Generating Assets
         run: |
-          build:icons
+          npm run build:icons
       
       - name: Install the Apple certificate and provisioning profile
         env:
